--- a/style1.css
+++ b/style1.css
@@ -6,7 +6,7 @@
         margin: 0px;
         padding: 0px;
         height: 900px;
-        background-image: linear-gradient(rgba(0, 0, 0, 0.7),rgba(0, 0, 0, 0.7)),url(veltech.jpg);
+        background-image: linear-gradient(rgba(0, 0, 0, 0.7),rgba(0, 0, 0, 0.7)),url('veltech.jpg');
         background-position: center;
         background-size: cover;
         position: relative;
